# Secure-Transact

./: .gitignore  .gitmodules  BacklogProduktu.docx  CMakeLists.txt  Instrukcja.docx  SecureTransact.pyproject  SecureTransact.pyproject.user.bbfdea7  SecureTransact.qmlproject  SecureTransact.qmlproject.qtds  SzablonProjektInzynierski.docx  blockchain.py  encryption.py  global_constants.py  guinode.py  main.py  networking.py  powlib.py  qmlmodules  requirements.txt  restnode.py  stake.py  start.py  user.py
Secure-Transact-messages-blocks-test/: blockchain.py  encryption.py  guinode.py  powlib.py  restnode.py
asset_imports/: CMakeLists.txt  images.qrc
asset_imports/Quick3DAssets/Bitcoin/: Bitcoin.qml  _importdata.json  qmldir
asset_imports/Quick3DAssets/Bitcoin/meshes/: curve_002_mesh.mesh
asset_imports/Quick3DAssets/Coin/: Coin.qml  _importdata.json  qmldir
asset_imports/Quick3DAssets/Coin/meshes/: circle_mesh.mesh  plane_003_mesh.mesh  plane_005_mesh.mesh  text_002_mesh.mesh
asset_imports/Quick3DAssets/Etherium/: Etherium.qml  _importdata.json  qmldir
asset_imports/Quick3DAssets/Etherium/meshes/: circle_000_mesh.mesh
asset_imports/Quick3DAssets/Orbiter_Space/: Orbiter_Space.qml  _importdata.json  qmldir
asset_imports/Quick3DAssets/Tuomodesign_ethereum/: Tuomodesign_ethereum.qml  _importdata.json  qmldir
asset_imports/Quick3DAssets/Tuomodesign_ethereum/meshes/: ethereum_mesh.mesh
asset_imports/Quick3DAssets/Uploads_files_993453_etherium/: Uploads_files_993453_etherium.qml  _importdata.json  qmldir
asset_imports/Quick3DAssets/Uploads_files_993453_etherium/meshes/: circle_002_mesh.mesh
assets/: CMakeLists.txt
assets/Bitcoin/: Bitcoin.hints  Bitcoin.qml  _importdata.json  qmldir
assets/Bitcoin/meshes/: curve_004_mesh.mesh  curve_mesh.mesh
cmake/: UpdateSubmodules.cmake
content/: App.qml  Screen01.ui.qml
dependencies/: CMakeLists.txt
design_figma/: SecureTransact - Wireframing.jam
documentation/: OrganizacjaIInfrastrukturaProjektu.docx
imports/: CMakeLists.txt
imports/SecureTransact/: CMakeLists.txt  qmldir
imports/SecureTransact/designer/: plugin.metainfo
include/: CMakeConfig.hpp  CMakeLists.txt  app_environment.hpp  import_qml_plugins.hpp
source/: CMakeLists.txt  blockchain.py  encryption.py  global_constants.py  import_qml_plugins.h  main.cpp  main.py  networking.py  powlib.py  project.py  settings.py  stake.py  task.py  user.py
source_gui/: AnimatedMainText.qml  AnimatedTitle.qml  App.qml  CMakeLists.txt  ClickableText.qml  EntryPage.ui.qml  FadeInAnimation.qml  FadeInText.qml  FadeInText.qml~RF11ba5366.TMP  InputBox.qml  InputFormBox.qml  LoginBox.qml  LoginForm.ui.qml  LoginPage.ui.qml  MainPage.ui.qml  MainScreen.ui.qml  MoveInText.qml  Pages.ui.qml  RegisterForm.ui.qml  RegisterPage.ui.qml  Screen01.ui.qml  StartPage.ui.qml  SubmitButton.qml  SubmitFormButton.qml  ThreeDObject.ui.qml  add_project.qml  add_task.qml  add_to_project.qml  add_user.qml  chat_module.qml  friends.qml  initial_page.qml  main.qml  options.qml  planning_module.qml  project_details.qml  select_users.qml  user.qml
source_gui/app_style/: AppStyle.qml  ColorPalette.qml  FontStyle.qml  Spacing.qml  SpacingObjects.qml
source_gui/gui_components/: FriendList.qml  InvitesList.qml  ProjectList.qml  TaskList.qml
source_gui/small_gui_components/: ClickableImage.qml  CustomBorder.qml  MyButton.qml  MyCheckButton.qml  MyTextFieldLabel.qml  TaskElementInfo.qml
tests/: CMakeLists.txt
